--- a/index.html
+++ b/index.html
@@ -37,29 +37,24 @@
       text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
     }
 
-    /* Logo */
-    .logo {
-      width: 100px;
-      height: 100px;
-      border-radius: 12px;
-      background-color: white;
+    /* Contenedor del título con GIFs */
+    .title-container {
       display: flex;
       align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    .logo img {
-      width: 80%;
-      height: 80%;
+      gap: 15px; /* Espacio entre el título y los GIFs */
+      animation: fadeIn 2s ease-in-out;
     }
 
     /* Título principal */
     .title {
       font-size: 2.5rem;
       font-weight: bold;
-      margin-bottom: 10px;
-      animation: fadeIn 2s ease-in-out;
+    }
+
+    /* GIFs al lado del título */
+    .title-gif {
+      width: 60px; /* Tamaño del GIF */
+      height: 60px;
     }
 
     /* Subtítulo */
@@ -121,7 +116,12 @@
     <div class="logo">
       <img src="your-logo.png" alt="Logo">
     </div>
-    <div class="title">Developer7452</div>
+    <!-- Contenedor del título con GIFs -->
+    <div class="title-container">
+      <img src="your-gif-left.gif" alt="GIF animado izquierdo" class="title-gif">
+      <div class="title">Developer7452</div>
+      <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
+    </div>
     <div class="subtitle">Ahora tu dinero va a ser nuestro</div>
     <div class="icons">
       <a href="https://youtube.com" target="_blank" class="icon">
