--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
       <div class="title">Developer7452</div>
       <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
     </div>
-    <div class="subtitle">Ahora tu dinero va a ser nuestro</div>
+    <div class="subtitle">"¿Buscas addons personalizados o comisiones únicas para Minecraft? ¡Transforma tu experiencia de juego con diseños exclusivos hechos a tu medida! Contáctame y comencemos tu proyecto."
+
+</div>
     <div class="icons">
       <a href="https://youtube.com" target="_blank" class="icon">
         <img src="youtube-icon.png" alt="YouTube">
