--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
       <div class="title">Developer7452</div>
       <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
     </div>
-    <div class="subtitle">"¿Buscas addons personalizados o comisiones únicas para Minecraft? ¡Transforma tu experiencia de juego con diseños exclusivos hechos a tu medida! Contáctame y comencemos tu proyecto."
+    <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."
+
 
 </div>
     <div class="icons">
