--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
       <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
     </div>
     <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."
-
-
 </div>
     <div class="icons">
+        <a href="https://youtube.com" target="_blank" class="icon">
+        <img src="jack-icon.png" alt="Jack">
+      </a>
       <a href="https://youtube.com" target="_blank" class="icon">
         <img src="youtube-icon.png" alt="YouTube">
       </a>
@@ -135,6 +136,9 @@
       </a>
       <a href="https://twitter.com" target="_blank" class="icon">
         <img src="x-icon.png" alt="X">
+      </a>
+      <a href="https://youtube.com" target="_blank" class="icon">
+        <img src="dark-icon.png" alt="Dark">
       </a>
     </div>
   </div>
