--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
     <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."
 </div>
     <div class="icons">
-        <a href="https://youtube.com" target="_blank" class="icon">
+        <a href="https://discord.gg/6R7xhTYc" target="_blank" class="icon">
         <img src="jack-icon.png" alt="Jack">
       </a>
       <a href="https://youtube.com" target="_blank" class="icon">
         <img src="youtube-icon.png" alt="YouTube">
       </a>
-      <a href="https://discord.com" target="_blank" class="icon">
+      <a href="https://discord.gg/htQMQjFn" target="_blank" class="icon">
         <img src="discord-icon.png" alt="Discord">
       </a>
       <a href="https://twitter.com" target="_blank" class="icon">
         <img src="x-icon.png" alt="X">
       </a>
-      <a href="https://youtube.com" target="_blank" class="icon">
+      <a href="https://discord.gg/b8j5DEAW" target="_blank" class="icon">
         <img src="dark-icon.png" alt="Dark">
       </a>
     </div>
