--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <a href="https://discord.gg/6R7xhTYc" target="_blank" class="icon">
         <img src="jack-icon.png" alt="Jack">
       </a>
-      <a href="https://youtube.com" target="_blank" class="icon">
+      <a href="https://www.youtube.com/@developer-7452" target="_blank" class="icon">
         <img src="youtube-icon.png" alt="YouTube">
       </a>
       <a href="https://discord.gg/htQMQjFn" target="_blank" class="icon">
         <img src="discord-icon.png" alt="Discord">
       </a>
-      <a href="https://twitter.com" target="_blank" class="icon">
+      <a href="https://x.com/Developer7452?t=-pc83bf_8qIY9FaK5rkUiA&s=09" target="_blank" class="icon">
         <img src="x-icon.png" alt="X">
       </a>
       <a href="https://discord.gg/b8j5DEAW" target="_blank" class="icon">
