--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
         <img src="jack-icon.png" alt="Jack">
       </a>
       <a href="https://www.youtube.com/@developer-7452" target="_blank" class="icon">
-        <img src="youtube-icon.png" alt="YouTube">
+        <img src="youtube-ico.png" alt="YouTube">
       </a>
       <a href="https://discord.gg/htQMQjFn" target="_blank" class="icon">
-        <img src="discord-icon.png" alt="Discord">
+        <img src="discord-ico.png" alt="Discord">
       </a>
       <a href="https://x.com/Developer7452?t=-pc83bf_8qIY9FaK5rkUiA&s=09" target="_blank" class="icon">
-        <img src="x-icon.png" alt="X">
+        <img src="x-ico.png" alt="X">
       </a>
       <a href="https://discord.gg/b8j5DEAW" target="_blank" class="icon">
         <img src="dark-icon.png" alt="Dark">
