--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Developer7452</title>
   <style>
+    /* Reset General */
     body, html {
       margin: 0;
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
       font-family: Arial, sans-serif;
     }
 
@@ -25,7 +25,34 @@
       z-index: -1;
     }
 
-    /* Contenedor principal */
+    /* Barra de Navegación */
+    .navbar {
+      background: #2c2c2c; /* Gris oscuro */
+      color: white;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 15px;
+      transition: background 0.3s;
+    }
+
+    .navbar a:hover {
+      background: #444;
+      border-radius: 5px;
+    }
+
+    /* Contenido principal */
     .content {
       display: flex;
       flex-direction: column;
@@ -35,43 +62,31 @@
       color: white;
       text-align: center;
       text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+      margin-top: 60px; /* Espacio para la barra */
     }
 
-    /* Contenedor del título con GIFs */
+    /* Título y GIFs */
     .title-container {
       display: flex;
       align-items: center;
-      gap: 15px; /* Espacio entre el título y los GIFs */
+      gap: 15px;
       animation: fadeIn 2s ease-in-out;
     }
 
-    /* Título principal */
     .title {
       font-size: 2.5rem;
       font-weight: bold;
     }
 
-    /* GIFs al lado del título */
     .title-gif {
-      width: 60px; /* Tamaño del GIF */
+      width: 60px;
       height: 60px;
     }
 
-    /* Subtítulo */
     .subtitle {
       font-size: 1.2rem;
       margin-bottom: 30px;
       animation: fadeIn 2s ease-in-out 1s;
-    }
-
-    /* Animaciones */
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
     }
 
     /* Íconos */
@@ -102,32 +117,39 @@
       width: 30px;
       height: 30px;
     }
+
     /* Logo */
-.logo img {
-  width: 100px; /* Tamaño predeterminado del logo */
-  height: auto;
-}
+    .logo img {
+      width: 100px;
+      height: auto;
+    }
 
-/* Cambia el tamaño del logo en pantallas pequeñas */
-@media (max-width: 768px) {
-  .logo img {
-    width: 120px;
-  }
-}
+    @media (max-width: 768px) {
+      .logo img {
+        width: 120px;
+      }
+    }
 
-/* Cambia el tamaño del logo en pantallas muy pequeñas */
-@media (max-width: 480px) {
-  .logo img {
-    width: 160px;
-  }
-}
+    @media (max-width: 480px) {
+      .logo img {
+        width: 160px;
+      }
+    }
 
-/* Cambia el tamaño del logo en pantallas grandes */
-@media (min-width: 1024px) {
-  .logo img {
-    width: 240px;
-  }
-}
+    @media (min-width: 1024px) {
+      .logo img {
+        width: 190px;
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
   </style>
 </head>
 <body>
@@ -137,31 +159,38 @@
     Tu navegador no soporta videos.
   </video>
 
+  <!-- Barra de Navegación -->
+  <div class="navbar">
+    <a href="addon_maker.html">Addon_Maker</a>
+    <a href="addons.html">Addons</a>
+    <a href="creditos.html">Créditos</a>
+    <a href="bugs.html">Bugs</a>
+    <a href="sugerencias.html">Sugerencias</a>
+  </div>
+
   <!-- Contenido principal -->
   <div class="content">
-   <div class="logo">
-  <img src="your-logo.png" alt="Logo">
-</div>
-    <!-- Contenedor del título con GIFs -->
+    <div class="logo">
+      <img src="your-logo.png" alt="Logo">
+    </div>
     <div class="title-container">
       <img src="your-gif-left.gif" alt="GIF animado izquierdo" class="title-gif">
       <div class="title">Developer7452</div>
-      <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
+      <img src="your-gif-right.gif" alt="GIF animado derecho" class="title-gif">
     </div>
-    <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."
-</div>
+    <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."</div>
     <div class="icons">
-        <a href="https://discord.gg/6R7xhTYc" target="_blank" class="icon">
+      <a href="https://discord.gg/6R7xhTYc" target="_blank" class="icon">
         <img src="jack-icon.png" alt="Jack">
       </a>
       <a href="https://www.youtube.com/@developer-7452" target="_blank" class="icon">
-        <img src="youtube-ico.png" alt="YouTube">
+        <img src="youtube-icon.png" alt="YouTube">
       </a>
       <a href="https://discord.gg/htQMQjFn" target="_blank" class="icon">
-        <img src="discord-ico.png" alt="Discord">
+        <img src="discord-icon.png" alt="Discord">
       </a>
       <a href="https://x.com/Developer7452?t=-pc83bf_8qIY9FaK5rkUiA&s=09" target="_blank" class="icon">
-        <img src="x-ico.png" alt="X">
+        <img src="x-icon.png" alt="X">
       </a>
       <a href="https://discord.gg/b8j5DEAW" target="_blank" class="icon">
         <img src="dark-icon.png" alt="Dark">
