--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       color: white;
       text-decoration: none;
       padding: 10px 15px;
+      font-size: 1rem;
       transition: background 0.3s;
     }
 
@@ -124,21 +125,84 @@
       height: auto;
     }
 
+    /* Responsividad para fuentes y elementos */
+    @media (max-width: 1024px) {
+      .title {
+        font-size: 2rem;
+      }
+
+      .subtitle {
+        font-size: 1rem;
+      }
+
+      .navbar a {
+        font-size: 0.8rem;
+      }
+
+      .icon {
+        width: 45px;
+        height: 45px;
+      }
+
+      .icon img {
+        width: 25px;
+        height: 25px;
+      }
+    }
+
     @media (max-width: 768px) {
+      .title {
+        font-size: 1.8rem;
+      }
+
+      .subtitle {
+        font-size: 0.9rem;
+      }
+
+      .navbar a {
+        font-size: 0.7rem;
+      }
+
+      .icon {
+        width: 40px;
+        height: 40px;
+      }
+
+      .icon img {
+        width: 20px;
+        height: 20px;
+      }
+
       .logo img {
-        width: 120px;
+        width: 80px;
       }
     }
 
     @media (max-width: 480px) {
-      .logo img {
-        width: 160px;
+      .title {
+        font-size: 1.5rem;
       }
-    }
 
-    @media (min-width: 1024px) {
+      .subtitle {
+        font-size: 0.8rem;
+      }
+
+      .navbar a {
+        font-size: 0.6rem;
+      }
+
+      .icon {
+        width: 35px;
+        height: 35px;
+      }
+
+      .icon img {
+        width: 18px;
+        height: 18px;
+      }
+
       .logo img {
-        width: 190px;
+        width: 70px;
       }
     }
 
@@ -176,7 +240,7 @@
     <div class="title-container">
       <img src="your-gif-left.gif" alt="GIF animado izquierdo" class="title-gif">
       <div class="title">Developer7452</div>
-      <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
+      <img src="your-gif-right.gif" alt="GIF animado derecho" class="title-gif">
     </div>
     <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."</div>
     <div class="icons">
@@ -184,13 +248,13 @@
         <img src="jack-icon.png" alt="Jack">
       </a>
       <a href="https://www.youtube.com/@developer-7452" target="_blank" class="icon">
-        <img src="youtube-ico.png" alt="YouTube">
+        <img src="youtube-icon.png" alt="YouTube">
       </a>
       <a href="https://discord.gg/htQMQjFn" target="_blank" class="icon">
-        <img src="discord-ico.png" alt="Discord">
+        <img src="discord-icon.png" alt="Discord">
       </a>
       <a href="https://x.com/Developer7452?t=-pc83bf_8qIY9FaK5rkUiA&s=09" target="_blank" class="icon">
-        <img src="x-ico.png" alt="X">
+        <img src="x-icon.png" alt="X">
       </a>
       <a href="https://discord.gg/b8j5DEAW" target="_blank" class="icon">
         <img src="dark-icon.png" alt="Dark">
