--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="title-container">
       <img src="your-gif-left.gif" alt="GIF animado izquierdo" class="title-gif">
       <div class="title">Developer7452</div>
-      <img src="your-gif-right.gif" alt="GIF animado derecho" class="title-gif">
+      <img src="your-gif-left.gif" alt="GIF animado derecho" class="title-gif">
     </div>
     <div class="subtitle">"Addons y comisiones exclusivas para Minecraft. Crea tu mundo único. Contáctame."</div>
     <div class="icons">
