--- a/creditos.html
+++ b/creditos.html
@@ -15,7 +15,7 @@
       color: #ffffff;
     }
 
-    /* Barra de Navegación */
+ /* Barra de Navegación */
     .navbar {
       background: #2c2c2c; /* Gris oscuro */
       color: white;
@@ -34,6 +34,7 @@
       color: white;
       text-decoration: none;
       padding: 10px 15px;
+      font-size: 1rem;
       transition: background 0.3s;
     }
 
@@ -41,7 +42,6 @@
       background: #444;
       border-radius: 5px;
     }
-
     /* Contenido principal */
     .content {
       margin-top: 70px; /* Espacio para la barra de navegación */
@@ -101,6 +101,85 @@
       .credits-container {
         flex-direction: column;
         align-items: center;
+      }
+    }
+     @media (max-width: 1024px) {
+      .title {
+        font-size: 2rem;
+      }
+
+      .subtitle {
+        font-size: 1rem;
+      }
+
+      .navbar a {
+        font-size: 0.8rem;
+      }
+
+      .icon {
+        width: 45px;
+        height: 45px;
+      }
+
+      .icon img {
+        width: 25px;
+        height: 25px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .title {
+        font-size: 1.8rem;
+      }
+
+      .subtitle {
+        font-size: 0.9rem;
+      }
+
+      .navbar a {
+        font-size: 0.7rem;
+      }
+
+      .icon {
+        width: 40px;
+        height: 40px;
+      }
+
+      .icon img {
+        width: 20px;
+        height: 20px;
+      }
+
+      .logo img {
+        width: 80px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .title {
+        font-size: 1.5rem;
+      }
+
+      .subtitle {
+        font-size: 0.8rem;
+      }
+
+      .navbar a {
+        font-size: 0.6rem;
+      }
+
+      .icon {
+        width: 35px;
+        height: 35px;
+      }
+
+      .icon img {
+        width: 18px;
+        height: 18px;
+      }
+
+      .logo img {
+        width: 70px;
       }
     }
   </style>
