--- a/bugs.html
+++ b/bugs.html
@@ -14,9 +14,9 @@
       color: #ffffff;
     }
 
-    /* Barra de Navegación */
+ /* Barra de Navegación */
     .navbar {
-      background: #2c2c2c;
+      background: #2c2c2c; /* Gris oscuro */
       color: white;
       display: flex;
       justify-content: space-around;
@@ -33,6 +33,7 @@
       color: white;
       text-decoration: none;
       padding: 10px 15px;
+      font-size: 1rem;
       transition: background 0.3s;
     }
 
@@ -99,6 +100,86 @@
     .conditional-field {
       display: none;
     }
+    
+     @media (max-width: 1024px) {
+      .title {
+        font-size: 2rem;
+      }
+
+      .subtitle {
+        font-size: 1rem;
+      }
+
+      .navbar a {
+        font-size: 0.8rem;
+      }
+
+      .icon {
+        width: 45px;
+        height: 45px;
+      }
+
+      .icon img {
+        width: 25px;
+        height: 25px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .title {
+        font-size: 1.8rem;
+      }
+
+      .subtitle {
+        font-size: 0.9rem;
+      }
+
+      .navbar a {
+        font-size: 0.7rem;
+      }
+
+      .icon {
+        width: 40px;
+        height: 40px;
+      }
+
+      .icon img {
+        width: 20px;
+        height: 20px;
+      }
+
+      .logo img {
+        width: 80px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .title {
+        font-size: 1.5rem;
+      }
+
+      .subtitle {
+        font-size: 0.8rem;
+      }
+
+      .navbar a {
+        font-size: 0.6rem;
+      }
+
+      .icon {
+        width: 35px;
+        height: 35px;
+      }
+
+      .icon img {
+        width: 18px;
+        height: 18px;
+      }
+
+      .logo img {
+        width: 70px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -108,6 +189,7 @@
     <a href="addon_maker.html">Addon_Maker</a>
     <a href="addons.html">Addons</a>
     <a href="creditos.html">Créditos</a>
+    <a href="sugerencias.html">Sugerencias</a>
   </div>    
 
   <!-- Contenido principal -->
@@ -250,4 +332,4 @@
   });
 </script>
 </body>
-  </html>
+</html>
