--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <!-- Barra de Navegación -->
   <div class="navbar">
-    <a href="addon_maker.html">Addon_Maker</a>
+    <a href="addon_maker.html">Addon Maker</a>
     <a href="addons.html">Addons</a>
     <a href="creditos.html">Créditos</a>
     <a href="bugs.html">Bugs</a>
