--- a/addons.html
+++ b/addons.html
@@ -14,6 +14,39 @@
             color: #ffffff;
         }
 
+        /* Barra de Navegación */
+        .navbar {
+            background: #2c2c2c; /* Gris oscuro */
+            color: white;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding: 10px 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 15px;
+            font-size: 1rem;
+            transition: background 0.3s;
+        }
+
+        .navbar a:hover {
+            background: #444;
+            border-radius: 5px;
+        }
+
+        /* Separador entre Navbar y Addons */
+        .navbar-separator {
+            margin-top: 60px; /* Espacio entre navbar y sección addons */
+        }
+
         .addons-section {
             margin: 20px auto;
             padding: 20px;
@@ -120,60 +153,158 @@
         .addons-container::-webkit-scrollbar-thumb:hover {
             background-color: #888;
         }
+
+        /* Responsividad para fuentes y elementos */
+        @media (max-width: 1024px) {
+            .navbar a {
+                font-size: 0.8rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .navbar a {
+                font-size: 0.7rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .navbar a {
+                font-size: 0.6rem;
+            }
+        }
     </style>
 </head>
 <body>
-
-<section class="addons-section">
-    <h2>Addons de Developer7452</h2>
-    <div class="addons-container">
-        <!-- Addon 1 -->
-        <div class="addon-card">
-            <div class="carousel">
-                <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
-                <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
-            </div>
-            <div class="addon-details">
-                <h3>Addon 1</h3>
-                <p>Descripción breve del addon. Características clave.</p>
-                <a href="#">Ver más</a>
-            </div>
-        </div>
-
-        <!-- Addon 2 -->
-        <div class="addon-card">
-            <div class="carousel">
-                <img src="addon3.png" class="active" alt="Addon 2 Imagen 1">
-                <img src="addon3-1.png" alt="Addon 2 Imagen 2">
-            </div>
-            <div class="addon-details">
-                <h3>Addon 2</h3>
-                <p>Descripción breve del addon. Características clave.</p>
-                <a href="#">Ver más</a>
-            </div>
-        </div>
+    <div class="navbar">
+ <a href="index.html">Inicio</a>
+ <a href="addon_maker.html">Addon_Maker</a>
+        <a href="creditos.html">Créditos</a>
+        <a href="bugs.html">Bugs</a>
+        <a href="sugerencias.html">Sugerencias</a>
     </div>
-</section>
 
-<script>
-    // Carrusel de imágenes
-    document.addEventListener('DOMContentLoaded', () => {
-        const carousels = document.querySelectorAll('.carousel');
+    <!-- Separador -->
+    <div class="navbar-separator"></div>
 
-        carousels.forEach(carousel => {
-            let currentIndex = 0;
-            const images = carousel.querySelectorAll('img');
-            const totalImages = images.length;
+    <section class="addons-section">
+        <h2>Json UI</h2>
+        <div class="addons-container">
+            <!-- Addon 1 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
+                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 1</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
 
-            setInterval(() => {
-                images[currentIndex].classList.remove('active');
-                currentIndex = (currentIndex + 1) % totalImages;
-                images[currentIndex].classList.add('active');
-            }, 3000); // Cambia cada 3 segundos
+            <!-- Addon 2 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 2</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!--2-->
+  <div class="navbar-separator"></div>
+
+    <section class="addons-section">
+        <h2>Textures</h2>
+        <div class="addons-container">
+            <!-- Addon 1 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
+                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 1</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
+
+            <!-- Addon 2 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 2</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- 3-->
+  <div class="navbar-separator"></div>
+
+    <section class="addons-section">
+        <h2>Addons</h2>
+        <div class="addons-container">
+            <!-- Addon 1 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
+                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 1</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
+
+            <!-- Addon 2 -->
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 2</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="#">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script>
+        // Carrusel de imágenes
+        document.addEventListener('DOMContentLoaded', () => {
+            const carousels = document.querySelectorAll('.carousel');
+
+            carousels.forEach(carousel => {
+                let currentIndex = 0;
+                const images = carousel.querySelectorAll('img');
+                const totalImages = images.length;
+
+                setInterval(() => {
+                    images[currentIndex].classList.remove('active');
+                    currentIndex = (currentIndex + 1) % totalImages;
+                    images[currentIndex].classList.add('active');
+                }, 3000); // Cambia cada 3 segundos
+            });
         });
-    });
-</script>
-
+    </script>
 </body>
 </html>
