--- a/addons.html
+++ b/addons.html
@@ -263,8 +263,8 @@
             <div class="addon-card">
                 <div class="carousel">
                     <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
-                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                    <img src="images/addon3-1.png" alt="Addon 1 Imagen 2">
+                    <img src="images/addon3.png" alt="Addon 1 Imagen 3">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 1</h3>
