--- a/addons.html
+++ b/addons.html
@@ -192,9 +192,9 @@
             <!-- Addon 1 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
-                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="addon1-2.png" alt="Addon 1 Imagen 2">
+                    <img src="addon1-3.png" alt="Addon 1 Imagen 3">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 1</h3>
@@ -206,8 +206,8 @@
             <!-- Addon 2 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 2</h3>
@@ -227,9 +227,9 @@
             <!-- Addon 1 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="images/addon1-2.png" alt="Addon 1 Imagen 2">
-                    <img src="images/addon1-3.png" alt="Addon 1 Imagen 3">
+                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="addon1-2.png" alt="Addon 1 Imagen 2">
+                    <img src="addon1-3.png" alt="Addon 1 Imagen 3">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 1</h3>
@@ -241,8 +241,8 @@
             <!-- Addon 2 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 2</h3>
@@ -262,9 +262,9 @@
             <!-- Addon 1 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="images/addon3-1.png" alt="Addon 1 Imagen 2">
-                    <img src="images/addon3.png" alt="Addon 1 Imagen 3">
+                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="addon3-1.png" alt="Addon 1 Imagen 2">
+                    <img src="addon3.png" alt="Addon 1 Imagen 3">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 1</h3>
@@ -276,8 +276,8 @@
             <!-- Addon 2 -->
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="images/addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="images/addon2-2.png" alt="Addon 2 Imagen 2">
+                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 2</h3>
