--- a/addons.html
+++ b/addons.html
@@ -61,6 +61,15 @@
             font-size: 2em;
             margin-bottom: 20px;
             color: #f39c12;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .addons-section h2 img {
+            width: 30px;
+            height: 30px;
         }
 
         /* Grid de Addons */
@@ -129,7 +138,7 @@
             display: inline-block;
             text-decoration: none;
             color: #fff;
-            background-color: #f39c12;
+            background-color: #28a745;
             padding: 5px 10px;
             border-radius: 5px;
             font-size: 0.9em;
@@ -137,7 +146,7 @@
         }
 
         .addon-details a:hover {
-            background-color: #d87b05;
+            background-color: #1e7e34;
         }
 
         /* Scroll personalizado */
@@ -153,31 +162,12 @@
         .addons-container::-webkit-scrollbar-thumb:hover {
             background-color: #888;
         }
-
-        /* Responsividad para fuentes y elementos */
-        @media (max-width: 1024px) {
-            .navbar a {
-                font-size: 0.8rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .navbar a {
-                font-size: 0.7rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .navbar a {
-                font-size: 0.6rem;
-            }
-        }
     </style>
 </head>
 <body>
     <div class="navbar">
- <a href="index.html">Inicio</a>
- <a href="addon_maker.html">Addon_Maker</a>
+        <a href="index.html">Inicio</a>
+        <a href="addon_maker.html">Addon_Maker</a>
         <a href="creditos.html">Créditos</a>
         <a href="bugs.html">Bugs</a>
         <a href="sugerencias.html">Sugerencias</a>
@@ -186,123 +176,70 @@
     <!-- Separador -->
     <div class="navbar-separator"></div>
 
+    <!-- Sección JSON UI -->
     <section class="addons-section">
-        <h2>Json UI</h2>
+        <h2><img src="ui.png" alt="JSON UI Icon"> Json UI</h2>
         <div class="addons-container">
-            <!-- Addon 1 -->
             <div class="addon-card">
                 <div class="carousel">
                     <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="addon1-2.png" alt="Addon 1 Imagen 2">
-                    <img src="addon1-3.png" alt="Addon 1 Imagen 3">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 1</h3>
                     <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
-                </div>
-            </div>
-
-            <!-- Addon 2 -->
-            <div class="addon-card">
-                <div class="carousel">
-                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
-                </div>
-                <div class="addon-details">
-                    <h3>Addon 2</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <!--2-->
-  <div class="navbar-separator"></div>
-
-    <section class="addons-section">
-        <h2>Textures</h2>
-        <div class="addons-container">
-            <!-- Addon 1 -->
-            <div class="addon-card">
-                <div class="carousel">
-                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="addon1-2.png" alt="Addon 1 Imagen 2">
-                    <img src="addon1-3.png" alt="Addon 1 Imagen 3">
-                </div>
-                <div class="addon-details">
-                    <h3>Addon 1</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
-                </div>
-            </div>
-
-            <!-- Addon 2 -->
-            <div class="addon-card">
-                <div class="carousel">
-                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
-                </div>
-                <div class="addon-details">
-                    <h3>Addon 2</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
+                    <a href="descargas/addon1.json">Link de descarga</a>
                 </div>
             </div>
         </div>
     </section>
 
-<!-- 3-->
-  <div class="navbar-separator"></div>
-
+    <!-- Sección Textures -->
+    <div class="navbar-separator"></div>
     <section class="addons-section">
-        <h2>Addons</h2>
+        <h2><img src="textures.png" alt="Textures Icon"> Textures</h2>
         <div class="addons-container">
-            <!-- Addon 1 -->
-            <div class="addon-card">
-                <div class="carousel">
-                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
-                    <img src="addon3-1.png" alt="Addon 1 Imagen 2">
-                    <img src="addon3.png" alt="Addon 1 Imagen 3">
-                </div>
-                <div class="addon-details">
-                    <h3>Addon 1</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
-                </div>
-            </div>
-
-            <!-- Addon 2 -->
             <div class="addon-card">
                 <div class="carousel">
                     <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
-                    <img src="addon2-2.png" alt="Addon 2 Imagen 2">
                 </div>
                 <div class="addon-details">
                     <h3>Addon 2</h3>
                     <p>Descripción breve del addon. Características clave.</p>
-                    <a href="#">Ver más</a>
+                    <a href="descargas/addon2.json">Link de descarga</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección Addons -->
+    <div class="navbar-separator"></div>
+    <section class="addons-section">
+        <h2><img src="addons.png" alt="Addons Icon"> Addons</h2>
+        <div class="addons-container">
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="addon3-1.png" class="active" alt="Addon 3 Imagen 1">
+                </div>
+                <div class="addon-details">
+                    <h3>Addon 3</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="descargas/addon3.json">Link de descarga</a>
                 </div>
             </div>
         </div>
     </section>
 
     <script>
-        // Carrusel de imágenes
         document.addEventListener('DOMContentLoaded', () => {
             const carousels = document.querySelectorAll('.carousel');
-
             carousels.forEach(carousel => {
                 let currentIndex = 0;
                 const images = carousel.querySelectorAll('img');
-                const totalImages = images.length;
-
                 setInterval(() => {
                     images[currentIndex].classList.remove('active');
-                    currentIndex = (currentIndex + 1) % totalImages;
+                    currentIndex = (currentIndex + 1) % images.length;
                     images[currentIndex].classList.add('active');
-                }, 3000); // Cambia cada 3 segundos
+                }, 3000);
             });
         });
     </script>
