--- a/addons.html
+++ b/addons.html
@@ -222,9 +222,9 @@
                     <img src="addon3-1.png" class="active" alt="Addon 3 Imagen 1">
                 </div>
                 <div class="addon-details">
-                    <h3>Addon 3</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="descargas/addon3.json">Link de descarga</a>
+                    <h3>Fast Totem</h3>
+                    <p>El Fast totem sirve para equiparte rápido el tótem o el escudo solo manteniendo presionado, y también contiene que cuando popeas tótem manda el mensaje de cuando popeas</p>
+                    <a href="https://link-hub.net/1209581/fast-totm">Link de descarga</a>
                 </div>
             </div>
         </div>
