--- a/addons.html
+++ b/addons.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="addon-details">
                     <h3>Fast Totem</h3>
-                    <p>El Fast totem sirve para equiparte rápido el tótem o el escudo solo manteniendo presionado, y también contiene que cuando popeas tótem manda el mensaje de cuando popeas</p>
+                    <p>El Fast totem sirve para equiparte rapido el totem en la segunda mano</p>
                     <a href="https://link-hub.net/1209581/fast-totm">Link de descarga</a>
                 </div>
             </div>
