--- a/creditos.html
+++ b/creditos.html
@@ -229,10 +229,28 @@
 
       <!-- Tarjeta 4 -->
       <div class="credit-card">
-        <img src="persona4.jpg" alt="Persona 4">
+        <img src="flozz.png" alt="Flozz">
         <div class="info">
-          <h3>Nombre de Persona 4</h3>
-          <p>Responsable de las pruebas beta y feedback de errores.</p>
+          <h3>Flozz</h3>
+          <p>El es encargado de ayudarme en mis proyectos, persona importante para mi</p>
+        </div>
+      </div>
+
+      <!-- Tarjeta 5 -->
+      <div class="credit-card">
+        <img src="angel.png" alt="angel136381">
+        <div class="info">
+          <h3>angel136381</h3>
+          <p>Angel me apoya y orienta en cosas que nose en especial JS</p>
+        </div>
+      </div>
+
+      <!-- Tarjeta 6 -->
+      <div class="credit-card">
+        <img src="senyu.png" alt="Senyu">
+        <div class="info">
+          <h3>SenyuGamer</h3>
+          <p>Es una persona que me apoya en cosas que nose sobre Json Ui</p>
         </div>
       </div>
     </div>
