--- a/creditos.html
+++ b/creditos.html
@@ -231,7 +231,7 @@
       <div class="credit-card">
         <img src="flozz.png" alt="Flozz">
         <div class="info">
-          <h3>Flozz</h3>
+          <h3>Flozz/Irhexe</h3>
           <p>El es encargado de ayudarme en mis proyectos, persona importante para mi</p>
         </div>
       </div>
