--- a/addons.html
+++ b/addons.html
@@ -204,9 +204,9 @@
                     <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
                 </div>
                 <div class="addon-details">
-                    <h3>Addon 2</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="descargas/addon2.json">Link de descarga</a>
+                    <h3>Undertale Text</h3>
+                    <p>Textura que agregala animacion de los textos de undertale</p>
+                    <a href="https://direct-link.net/1209581/undertale-animations">Link de descarga</a>
                 </div>
             </div>
         </div>
