--- a/addons.html
+++ b/addons.html
@@ -201,7 +201,7 @@
         <div class="addons-container">
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="addon2-1.png" class="active" alt="Addon 2 Imagen 1">
+                    <img src="undertale.png" class="active" alt="undertale">
                 </div>
                 <div class="addon-details">
                     <h3>Undertale Text</h3>
