--- a/addons.html
+++ b/addons.html
@@ -219,7 +219,7 @@
         <div class="addons-container">
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="addon3-1.png" class="active" alt="Addon 3 Imagen 1">
+                    <img src="fast.png" class="active" alt="Addon 3 Imagen 1">
                 </div>
                 <div class="addon-details">
                     <h3>Fast Totem</h3>
