--- a/addons.html
+++ b/addons.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -183,12 +184,12 @@
         <div class="addons-container">
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="undertale.png" class="active" alt="undertale">
+                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
                 </div>
                 <div class="addon-details">
-                    <h3>Undertale Text</h3>
-                    <p>Textura que agregala animacion de los textos de undertale</p>
-                    <a href="https://direct-link.net/1209581/undertale-animations">Link de descarga</a>
+                    <h3>Addon 1</h3>
+                    <p>Descripción breve del addon. Características clave.</p>
+                    <a href="descargas/addon1.json">Link de descarga</a>
                 </div>
             </div>
         </div>
@@ -201,12 +202,22 @@
         <div class="addons-container">
             <div class="addon-card">
                 <div class="carousel">
-                    <img src="addon1-1.png" class="active" alt="Addon 1 Imagen 1">
+                    <img src="undertale.png" class="active" alt="undertale">
                 </div>
                 <div class="addon-details">
-                    <h3>Addon 1</h3>
-                    <p>Descripción breve del addon. Características clave.</p>
-                    <a href="descargas/addon1.json">Link de descarga</a>
+                    <h3>Undertale Text</h3>
+                    <p>Textura que agregala animacion de los textos de undertale</p>
+                    <a href="https://direct-link.net/1209581/undertale-animations">Link de descarga</a>
+                </div>
+            </div>
+            <div class="addon-card">
+                <div class="carousel">
+                    <img src="id.png" class="active" alt="id">
+                </div>
+                <div class="addon-details">
+                    <h3>Undertale Text</h3>
+                    <p>este comoleto ayuda a sacar los ID's de los items solo haz d!ID</p>
+                    <a href="https://link-center.net/1209581/id-items">Link de descarga</a>
                 </div>
             </div>
         </div>
